Improve metric merging logic and log messages